--- a/angular.json
+++ b/angular.json
@@ -2,7 +2,8 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "cli": {
-    "packageManager": "npm"
+    "packageManager": "npm",
+    "analytics": "139ab313-98ca-4177-b24b-2071b06de8b8"
   },
   "newProjectRoot": "projects",
   "projects": {
